<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cadman_normal"
        android:text="@string/tamilnadu"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/stateCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stateTitle"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateST_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text="@string/overall"
                    android:textColor="@color/mid_grey"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/overallST_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text="@string/active"
                    android:textColor="@color/mid_grey"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/activeST_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text="@string/recovered"
                    android:textColor="@color/mid_grey"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/recoverST_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text="@string/death"
                    android:textColor="@color/mid_grey"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/deathST_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cadman_normal"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>