<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--    header part-->

    <View
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/purple" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pageHeader"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/cadman_normal"
        android:text="@string/No_network"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/wifiimage"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/wifi_asset" />

        <TextView
            android:id="@+id/msgtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wifiimage"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/cadman_normal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Check_internet"
            android:textAlignment="gravity"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/refreshBT"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/msgtv"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_asset"
            android:text="@string/refresh"
            android:textColor="@color/white" />
    </RelativeLayout>

    <!--    header end-->

    <!--    body part-->


    <View
        android:id="@+id/pageTrailing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple" />

</RelativeLayout>